--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -57,26 +57,55 @@
 
       </div>
     </div>
-    <div class="alert alert-warning">
+    <div class="alert alert-warning infoQuestions">
       <h4><strong>Attention</strong></h4>
       
       {% for key, subject in subjects %}
-        {% if nbSchoolLevels[key][0].1 == 0 %}
-          <p><strong>{{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
-        {% else %}
 
-          {% if nbSchoolLevels[key][0].1 == 1 %}
-            <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveau scolaire :
-          {% elseif nbSchoolLevels[key][0].1 < 5 %}
-            <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveaux scolaires :
-          {% endif %}
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <p class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ key }}">
+                  {% if nbSchoolLevels[key][0].1 == 0 %}
+                    <p><span class="caret"></span><strong> {{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
+                  {% else %}
 
-            {% for schoolLevel in schoolLevels[key] %}
-            {{ schoolLevel.schoolClass }}
-            {% endfor %}    
-            </p>
-            
-        {% endif %}
+                    {% if nbSchoolLevels[key][0].1 == 1 %}
+                      <p><span class="caret"></span><strong> {{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveau scolaire :
+                    {% elseif nbSchoolLevels[key][0].1 < 5 %}
+                      <p><span class="caret"></span><strong> {{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveaux scolaires :
+                    {% endif %}
+
+                    {% for schoolLevel in schoolLevels[key] %}
+                    {{ schoolLevel.schoolClass }}
+                    {% endfor %}    
+                    </p>
+                      
+                  {% endif %}
+                </a>
+              </p>
+            </div>
+            <div id="collapse{{ key }}" class="panel-collapse collapse">
+              <div class="panel-body">
+                {% for nbQuestion in nbQuestions[key] %}
+                  {% if loop.index0 == 0 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CP.</p>
+                  {% elseif loop.index0 == 1 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CE1.</p>
+                  {% elseif loop.index0 == 2 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CE2.</p>
+                  {% elseif loop.index0 == 3 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CM1.</p>
+                  {% elseif loop.index0 == 4 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CM2.</p>
+                  {% endif %}
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+          
       {% endfor %}
 
       <div class="center">  
