--- a/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
@@ -25,7 +25,6 @@
       <h4><strong>Attention</strong></h4>
 
       {% for key, subject in subjects %}
-
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
             <div class="panel-heading">
@@ -33,6 +32,8 @@
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ key }}">
                   {% if nbSchoolLevels[key][0].1 == 0 %}
                     <p><span class="caret"></span><strong> {{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
+                  {% elseif nbSchoolLevels[key][0].1 == 5 %}
+                    <p><span class="caret"></span><strong> {{ subject.nameSubject }}</strong></p>
                   {% else %}
 
                     {% if nbSchoolLevels[key][0].1 == 1 %}
@@ -68,8 +69,7 @@
               </div>
             </div>
           </div>
-        </div>
-          
+        </div>   
       {% endfor %}
     </div>
     
@@ -82,123 +82,134 @@
       </div>
     </div>
 
-    <div class="tab-content">
-      <div class="row tab-pane fade in active" id="validQuestions">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Question</th>
-              <th>Matière</th>
-              <th>Sous-matière</th>
-              <th>Niveau</th>
-              <th>Auteur</th>        
-              <th>Modération</th>
-              <th>Suppression</th>
-            </tr>
-          </thead>
-          <tbody>      
-            {% for validQuestion in validQuestions %}
-              <tr>
-                <td>{{ validQuestion.question }} </td>
-                <td>{{ validQuestion.topic.subject.nameSubject }} </td>
-                <td>{{ validQuestion.topic.nameTopic }} </td>
-                <td>{{ validQuestion.schoolClass.schoolClass }} </td>
-                <td>
-                  {% if "ROLE_USER" in validQuestion.userCount.roles %}
-                    Famille {{ validQuestion.userCount.username }} 
-                  {% elseif "ROLE_TEACHER" in validQuestion.userCount.roles %}
-                    M. / Mme {{ validQuestion.userCount.username }} 
-                  {% else %}                  
-                    {{ validQuestion.userCount.username }} 
-                  {% endif %}                  
-                </td>
-                <td><a href="{{ path('validate_question', { 'id': validQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
-                <td><a data-toggle="modal" data-target="#modalDeleteValidQuestion{{ validQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
+    {% if not validQuestions and not notValidQuestions %}        
+      <p>Aucune question n'a encore été soumise.</p>
+    {% else %}
 
-                <!-- Modal -->
-                  <div class="modal fade" id="modalDeleteValidQuestion{{ validQuestion.id }}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteValidQuestionLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                          <div class="modal-content">
-                              <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                  <h4 class="modal-title" id="modalDeleteValidQuestionLabel">Confirmation requise</h4>
-                              </div>
-                              <div class="modal-body">
-                                  Etes-vous sûr de vouloir supprimer la question ?
-                              </div>
-                              <div class="modal-footer">
-                                  <a href="{{ path('question_delete', { 'id': validQuestion.id }) }}">
-                                      {% if app.user.username == "Visiteur" and is_granted('ROLE_ADMIN') %}
-                                          <button class="btn btn-danger btn-lg disabled">Supprimer</button>
-                                      {% else %}
-                                          <button class="btn btn-danger btn-lg">Supprimer</button>
-                                      {% endif %}
-                                  </a>
-                              </div>
-                          </div><!-- /.modal-content -->
-                      </div><!-- /.modal-dialog -->
-                  </div><!-- /.modal -->
+      <div class="tab-content">
+        <div class="row tab-pane fade in active" id="validQuestions">
+          {% if validQuestions %}        
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Question</th>
+                  <th>Matière</th>
+                  <th>Sous-matière</th>
+                  <th>Niveau</th>
+                  <th>Auteur</th>        
+                  <th>Modération</th>
+                  <th>Suppression</th>
+                </tr>
+              </thead>
+              <tbody>      
+                {% for validQuestion in validQuestions %}
+                  <tr>
+                    <td>{{ validQuestion.question }} </td>
+                    <td>{{ validQuestion.topic.subject.nameSubject }} </td>
+                    <td>{{ validQuestion.topic.nameTopic }} </td>
+                    <td>{{ validQuestion.schoolClass.schoolClass }} </td>
+                    <td>
+                      {% if "ROLE_USER" in validQuestion.userCount.roles %}
+                        Famille {{ validQuestion.userCount.username }} 
+                      {% elseif "ROLE_TEACHER" in validQuestion.userCount.roles %}
+                        M. / Mme {{ validQuestion.userCount.username }} 
+                      {% else %}                  
+                        {{ validQuestion.userCount.username }} 
+                      {% endif %}                  
+                    </td>
+                    <td><a href="{{ path('validate_question', { 'id': validQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
+                    <td><a data-toggle="modal" data-target="#modalDeleteValidQuestion{{ validQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
 
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+                    <!-- Modal -->
+                      <div class="modal fade" id="modalDeleteValidQuestion{{ validQuestion.id }}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteValidQuestionLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                              <div class="modal-content">
+                                  <div class="modal-header">
+                                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                      <h4 class="modal-title" id="modalDeleteValidQuestionLabel">Confirmation requise</h4>
+                                  </div>
+                                  <div class="modal-body">
+                                      Etes-vous sûr de vouloir supprimer la question ?
+                                  </div>
+                                  <div class="modal-footer">
+                                      <a href="{{ path('question_delete', { 'id': validQuestion.id }) }}">
+                                          {% if app.user.username == "Visiteur" and is_granted('ROLE_ADMIN') %}
+                                              <button class="btn btn-danger btn-lg disabled">Supprimer</button>
+                                          {% else %}
+                                              <button class="btn btn-danger btn-lg">Supprimer</button>
+                                          {% endif %}
+                                      </a>
+                                  </div>
+                              </div><!-- /.modal-content -->
+                          </div><!-- /.modal-dialog -->
+                      </div><!-- /.modal -->
+
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          {% else %}              
+            <p>Il n'y a pas encore de question validée.</p>      
+          {% endif %}    
+        </div>
+
+        <div class="row tab-pane fade" id="notValidQuestions">
+          {% if notValidQuestions %}        
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Question</th>
+                  <th>Matière</th>
+                  <th>Sous-matière</th>
+                  <th>Auteur</th>        
+                  <th>Modération</th>
+                  <th>Suppression</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for notValidQuestion in notValidQuestions %}                
+                  <tr>
+                    <td>{{ notValidQuestion.question }} </td>
+                    <td>{{ notValidQuestion.topic.subject.nameSubject }} </td>
+                    <td>{{ notValidQuestion.topic.nameTopic }} </td>
+                    <td>Famille {{ notValidQuestion.userCount.username }} </td>
+                    <td><a href="{{ path('validate_question', { 'id': notValidQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
+                    <td><a data-toggle="modal" data-target="#modalDeleteQuestion{{ notValidQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
+
+                    <!-- Modal -->
+                      <div class="modal fade" id="modalDeleteNotValidQuestion{{ notValidQuestion.id }}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteNotValidQuestionLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                              <div class="modal-content">
+                                  <div class="modal-header">
+                                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                      <h4 class="modal-title" id="modalDeleteNotValidQuestionLabel">Confirmation requise</h4>
+                                  </div>
+                                  <div class="modal-body">
+                                      Etes-vous sûr de vouloir supprimer la question ?
+                                  </div>
+                                  <div class="modal-footer">
+                                      <a href="{{ path('question_delete', { 'id': notValidQuestion.id }) }}">
+                                          {% if app.user.username == "Visiteur" and is_granted('ROLE_ADMIN') %}
+                                              <button class="btn btn-danger btn-lg disabled">Supprimer</button>
+                                          {% else %}
+                                              <button class="btn btn-danger btn-lg">Supprimer</button>
+                                          {% endif %}
+                                      </a>
+                                  </div>
+                              </div><!-- /.modal-content -->
+                          </div><!-- /.modal-dialog -->
+                      </div><!-- /.modal -->
+
+                  </tr>
+                {% endfor %}
+              <tbody>            
+            </table>
+          {% else %}              
+            <p>Toutes les questions ont été validées.</p>      
+          {% endif %}                  
+        </div>
       </div>
-
-      <div class="row tab-pane fade" id="notValidQuestions">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Question</th>
-              <th>Matière</th>
-              <th>Sous-matière</th>
-              <th>Auteur</th>        
-              <th>Modération</th>
-              <th>Suppression</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for notValidQuestion in notValidQuestions %}                
-              <tr>
-                <td>{{ notValidQuestion.question }} </td>
-                <td>{{ notValidQuestion.topic.subject.nameSubject }} </td>
-                <td>{{ notValidQuestion.topic.nameTopic }} </td>
-                <td>Famille {{ notValidQuestion.userCount.username }} </td>
-                <td><a href="{{ path('validate_question', { 'id': notValidQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
-                <td><a data-toggle="modal" data-target="#modalDeleteQuestion{{ notValidQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
-
-                <!-- Modal -->
-                  <div class="modal fade" id="modalDeleteNotValidQuestion{{ notValidQuestion.id }}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteNotValidQuestionLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                          <div class="modal-content">
-                              <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                  <h4 class="modal-title" id="modalDeleteNotValidQuestionLabel">Confirmation requise</h4>
-                              </div>
-                              <div class="modal-body">
-                                  Etes-vous sûr de vouloir supprimer la question ?
-                              </div>
-                              <div class="modal-footer">
-                                  <a href="{{ path('question_delete', { 'id': notValidQuestion.id }) }}">
-                                      {% if app.user.username == "Visiteur" and is_granted('ROLE_ADMIN') %}
-                                          <button class="btn btn-danger btn-lg disabled">Supprimer</button>
-                                      {% else %}
-                                          <button class="btn btn-danger btn-lg">Supprimer</button>
-                                      {% endif %}
-                                  </a>
-                              </div>
-                          </div><!-- /.modal-content -->
-                      </div><!-- /.modal-dialog -->
-                  </div><!-- /.modal -->
-
-              </tr>
-            {% else %}
-              <p>Toutes les questions ont été validées.</p>
-            {% endfor %}
-          <tbody>            
-        </table>
-      </div>
-    </div>
+    {% endif %}                    
   </div>    
 {% endblock %}
  
