corrections get random question

--- a/src/GameBundle/Resources/views/Default/help.html.twig
+++ b/src/GameBundle/Resources/views/Default/help.html.twig
@@ -8,7 +8,15 @@
 {% block body %}
 <div class="container-fluid">
 
-    <h3>Help</h3>
+    <h2 style="text-align:center;">Aide</h2>
+
+    <h3>Règles du jeu</h3>
+        <h4>Objectif</h4>
+        <h4>Les couleurs du plateau</h4>
+
+    <h3>Explication du score</h3>
+    <h3>Votre participation compte !</h3>
+    
     
 </div>
 {% endblock %}
