--- a/src/UserBundle/Resources/views/Default/form_user.html.twig
+++ b/src/UserBundle/Resources/views/Default/form_user.html.twig
@@ -1,53 +1,5 @@
-{# src/UserBundle/Resources/views/Default/form.html.twig #}
+{# src/UserBundle/Resources/views/Default/form_user.html.twig #}
 
-{% extends "UserBundle::layout.html.twig" %}
-{% set settings = true %}
+{% extends "UserBundle:Default:form.html.twig" %}
+{% set addUser = true %}
 
-{% block title %}{{ parent() }} - {{ titleTab }} {% endblock %}
-
-{% block body %}
-
-    {% for message in app.session.flashbag.get('notice') %}
-        <div class="alert alert-danger">
-            <p>{{ message }}</p>
-        </div>
-    {% endfor %}
-    {% for message in app.session.flashbag.get('success') %}
-        <div class="alert alert-success">
-            <p>{{ message }}</p>
-        </div>
-    {% endfor %}
-
-    <h3>{{ title }}</h3>
-
-    <div class="row">
-        <div class="col-lg-offset-2 col-lg-8">
-            <div class="well">
-                {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-                {{ form_errors(form) }}
-
-                <div class="form-group">
-                    {% if form.username is defined %}
-                        {{ form_row(form.username) }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {% if form.password is defined %}
-                        {{ form_row(form.password) }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {% if form.roles is defined %}
-                        {{ form_row(form.roles) }}
-                    {% endif %}
-                </div>
-                
-                {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
-
-                {{ form_rest(form) }}
-                {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
-
-{% endblock %}
