--- a/src/GameBundle/Resources/views/Default/user_questions.html.twig
+++ b/src/GameBundle/Resources/views/Default/user_questions.html.twig
@@ -1,7 +1,7 @@
-{# src/GameBundle/Resources/views/Default/notifications.html.twig #}
+{# src/GameBundle/Resources/views/Default/user_questions.html.twig #}
 
 {% extends "GameBundle::layout.html.twig" %}
-{% set notif = true %}
+{% set user_questions = true %}
 
 {% block title %}{{ parent() }} - Index{% endblock %}
 
