--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -59,7 +59,8 @@
     </div>
     <div class="alert alert-warning infoQuestions">
       <h4><strong>Attention</strong></h4>
-      
+      <p>Pour garantir le bon déroulement du jeu, il doit y avoir suffisamment de questions.</p>
+      <p>Dans l'idéal, pour une matière, il devrait y avoir au moins 10 questions par niveau scolaire.</p><br/>
       {% for key, subject in subjects %}
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
