--- a/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
@@ -23,7 +23,9 @@
 
     <div class="alert alert-danger infoQuestions">
       <h4><strong>Attention</strong></h4>
-
+      <p>Pour garantir le bon déroulement du jeu, il doit y avoir suffisamment de questions.</p>
+      <p>Dans l'idéal, pour une matière, il devrait y avoir au moins 10 questions par niveau scolaire.</p><br/>
+      
       {% for key, subject in subjects %}
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
