--- a/src/UserBundle/Resources/views/Default/form.html.twig
+++ b/src/UserBundle/Resources/views/Default/form.html.twig
@@ -1,26 +1,25 @@
-{# src/UserBundle/Resources/views/Gamer/form_gamer.html.twig #}
+{# src/UserBundle/Resources/views/Default/form.html.twig #}
 
-{% extends "GameBundle::layout.html.twig" %}
-
-{% block title %}{{ parent() }} - Index{% endblock %}
+{% extends "UserBundle::layout.html.twig" %}
+{% block title %}{{ parent() }} - {{ titleTab }} {% endblock %}
 
 {% block body %}
+
     {% for message in app.session.flashbag.get('notice') %}
-      <div class="alert alert-danger">
-        <p>{{ message }}</p>
-      </div>
+        <div class="alert alert-danger">
+            <p>{{ message }}</p>
+        </div>
     {% endfor %}
-
     {% for message in app.session.flashbag.get('success') %}
-      <div class="alert alert-success">
-        <p>{{ message }}</p>
-      </div>
+        <div class="alert alert-success">
+            <p>{{ message }}</p>
+        </div>
     {% endfor %}
 
-    <h3>{{ title }} </h3>
+    <h3>{{ title }}</h3>
 
     <div class="row">
-        <div class="col-lg-offset-4 col-lg-4">
+        <div class="col-lg-offset-2 col-lg-8">
             <div class="well">
                 {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
                 {{ form_errors(form) }}
@@ -31,18 +30,13 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {% if form.firstname is defined %}
-                        {{ form_row(form.firstname) }}
+                    {% if form.password is defined %}
+                        {{ form_row(form.password) }}
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {% if form.role is defined %}
-                        {{ form_row(form.role) }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {% if form.schoolClass is defined %}
-                        {{ form_row(form.schoolClass) }}
+                    {% if form.roles is defined %}
+                        {{ form_row(form.roles) }}
                     {% endif %}
                 </div>
                 
@@ -58,6 +52,5 @@
             </div>
         </div>
     </div>
-
 
 {% endblock %}
