suppression bundles dans répertoire

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -52,12 +52,12 @@
             </button>
 
             <div class="dice">
-                <img class="die1" src="{{ asset('bundles/GameBundle/images/un.png') }}" alt="numéro un" />
-                <img class="die2" src="{{ asset('bundles/GameBundle/images/deux.png') }}" alt="numéro deux" />
-                <img class="die3" src="{{ asset('bundles/GameBundle/images/trois.png') }}" alt="numéro trois" />
-                <img class="die4" src="{{ asset('bundles/GameBundle/images/quatre.png') }}" alt="numéro quatre" />
-                <img class="die5" src="{{ asset('bundles/GameBundle/images/cinq.png') }}" alt="numéro cinq" />
-                <img class="die6" src="{{ asset('bundles/GameBundle/images/six.png') }}" alt="numéro six" />
+                <img class="die1" src="{{ asset('GameBundle/images/un.png') }}" alt="numéro un" />
+                <img class="die2" src="{{ asset('GameBundle/images/deux.png') }}" alt="numéro deux" />
+                <img class="die3" src="{{ asset('GameBundle/images/trois.png') }}" alt="numéro trois" />
+                <img class="die4" src="{{ asset('GameBundle/images/quatre.png') }}" alt="numéro quatre" />
+                <img class="die5" src="{{ asset('GameBundle/images/cinq.png') }}" alt="numéro cinq" />
+                <img class="die6" src="{{ asset('GameBundle/images/six.png') }}" alt="numéro six" />
             </div>
 
         </div>
