--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,7 @@
         <title>{% block title %}Le jeu de loi érudit{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" type='text/css' href="{{ asset('bundles/GameBundle/main.css') }}">
+            <link rel="stylesheet" type='text/css' href="{{ asset('GameBundle/main.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -96,7 +96,7 @@
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-            <script src="{{ asset('bundles/GameBundle/myscript.js') }}"></script>
+            <script src="{{ asset('GameBundle/myscript.js') }}"></script>
         {% endblock %}
     </body>
 </html>
