convention : ajout repertoire form/type

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
                                     <ul class="dropdown-menu">
                                         <li><a href=" {{ path('add_question') }} ">Ajout</a></li>
                                         <li><a href=" {{ path('moderate_question') }} ">Modération</a></li>
-                                        <li><a href=" {{ path('options_question') }} ">Options</a></li>
+                                        <li><a href=" {{ path('options_question') }} ">Options des thèmes</a></li>
                                     </ul>
                                 </li>
                                 {% if is_granted('ROLE_ADMIN') %}
