--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -30,7 +30,7 @@
                 </div>
                 <div class="question">
                 </div>
-                <div class="answers">
+                <div class="answers center">
                 </div>
                 <div class="infoAnswer center">
                 </div>
