--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -115,10 +115,10 @@
       </div>
     </div>  
       
-    <div class="center">
-      <input class="playButton btn btn-primary disabled" type="submit" value="JOUER" />
+    <div class="playButton">
+      <input class="btn btn-primary disabled" type="submit" value="JOUER" />
       </form>        
-    </div>
+    </div> 
 
     {% else %}
       <p>Il n'y a encore aucun joueur.</p>
