--- a/src/GameBundle/Resources/views/Admin/options_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/options_question.html.twig
@@ -58,7 +58,7 @@
                 <td rowspan="{{ subject.topics|length }}">
                   {{ subject.nameSubject }} 
                 </td>
-                <td rowspan="{{ subject.topics|length }}" class="deleteButton">
+                <td rowspan="{{ subject.topics|length }}" class="center">
                   <a data-toggle="modal" data-target="#modalDeleteSubject{{ subject.id }}"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></button></a>
                   
                   <!-- Modal -->
@@ -89,7 +89,7 @@
                 <td>
                   {{ topic.nameTopic }} 
                 </td>
-                <td class="deleteButton">
+                <td class="center">
                   <a data-toggle="modal" data-target="#modalDeleteTopic{{ topic.id }}"><button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></button></a>
 
                   <!-- Modal -->
