--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -11,9 +11,9 @@
       <p>{{ message }}</p>
     {% endfor %}
  
-    <h2>{{ title }}</h2>
+    <h3>{{ title }}</h3>
     <div class="row">
-        <div class="col-lg-offset-2 col-lg-8">
+        <div class="col-lg-offset-3 col-lg-6 col-sm-offset-1 col-sm-10 formQuestion">
             <div class="well">
                 {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
                 {{ form_errors(form) }}
