--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -22,11 +22,11 @@
     <div id="modal">
         <div id="window">
             <div class="questions">
-                <div class="infoQuestion">
-                    Difficulté : <div class="difficulty"></div>
-                    Matière : <div class="subject"></div>
-                    Thème : <div class="topic"></div>
-                    Niveau : <div class="schoolLevel"></div>
+                <div class="infoQuestion center">
+                    Difficulté : <span class="difficulty"></span>
+                    Thème : <span class="subject"></span>
+                    Catégorie : <span class="topic"></span>
+                    Niveau : <span class="schoolLevel"></span>
                 </div>
                 <div class="question">
                 </div>
