--- a/src/UserBundle/Resources/views/Default/form.html.twig
+++ b/src/UserBundle/Resources/views/Default/form.html.twig
@@ -19,7 +19,7 @@
     <h3>{{ title }}</h3>
 
     <div class="row">
-        <div class="col-lg-offset-2 col-lg-8">
+        <div class="col-lg-offset-3 col-lg-6 col-sm-offset-1 col-sm-10 formUser">
             <div class="well">
                 {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
                 {{ form_errors(form) }}
