--- a/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
@@ -23,7 +23,7 @@
 
     {% if gamers %} 
       <div class="tab-content">
-        <div class="row tab-pane fade in active" id="#">
+        <div class="table-responsive row tab-pane fade in active" id="#">
           <table class="table table-striped">
             <thead>
               <tr>
