--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -111,7 +111,7 @@
       {% endfor %}
 
       <div class="center">  
-        <p><a href=" {{ path('suggest_question') }} "><button class="btn btn-warning" type="button">N'hésitez pas à proposer vos questions !</button></a></p>
+        <p><a href=" {{ path('suggest_question') }} "><button class="btn btn-warning" type="button">N'hésitez pas ! <br/> Proposez vos questions.</button></a></p>
       </div>
     </div>  
       
