--- a/src/UserBundle/Resources/views/Default/user_manager.html.twig
+++ b/src/UserBundle/Resources/views/Default/user_manager.html.twig
@@ -20,7 +20,7 @@
       </div>
     {% endfor %}
 
-    <h3>GESTION DES UTILISATEURS</h3>
+    <h3>Gestion des utilisateurs</h3>
   
     <div class="row">
       <div class="col-sm-offset-4 col-sm-4" >
