--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -115,8 +115,8 @@
       </div>
     </div>  
       
-    <div class="playButton">
-      <input class="btn btn-primary disabled" type="submit" value="JOUER" />
+    <div class="center">
+      <input class="playButton btn btn-primary disabled" type="submit" value="JOUER" />
       </form>        
     </div> 
 
